yaml/mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-spring-mysql
  namespace: ingress-nginx
  labels:
    app: hello-spring
spec:
  selector:
    matchLabels:
      app: hello-spring
      tier: mysql
  template:
    metadata:
      labels:
        app: hello-spring
        tier: mysql
    spec:
      nodeSelector:
        app: mysql
      containers:
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
