yaml/hello-spring-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-nginx
  name: hello-spring-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: hello-spring
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
