yaml/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-spring-mysql
  namespace: ingress-nginx
  labels:
    app: hello-spring
spec:
  ports:
    - port: 3306
  selector:
    app: hello-spring
    tier: mysql
    ClusterIP: None
